# sqlmodel-tut-superhero

./: alembic.ini  main.py  pyproject.toml
assets/: __init__.py  database.py  database.sqlite
controllers/: __init__.py  create_new_hero.py
core/: __init__.py  config.py  dependency.py  middleware.py
crud/: __init__.py  hero.py
migrations/: env.py
migrations/versions/: 72b4c7ee2a09_alembic_setup.py  bd63e8e611b3_added_optional_to_power_column.py
models/: __init__.py  hero.py
routes/: __init__.py  heroes.py
utils/: __init__.py  format_process_time.py
